force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Remote_Deposit_Capture_Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>Remote_Deposit_Capture_Enrollment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remote Deposit Capture Enrollment Date</label>
    <type>Date</type>
</CustomField>