force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Responsible_User__c.field-meta.xml
<CustomField>
    <fullName>Responsible_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assigned by Financial Account Role - User Assignments flow. Triggered by creation of new Financial Account Role with RESP role type. This flow will overwrite the value should the role change to another User. Value will be cleared by User - Inactive User Account and Financial Account Fields flow when User is deactivated.</description>
    <label>Responsible User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Financial_Accounts_Responsible_User</relationshipName>
    <type>Lookup</type>
</CustomField>