force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Rolling_Average_Balance__c.field-meta.xml
<CustomField>
    <fullName>Rolling_Average_Balance__c</fullName>
    <label>Rolling Average Balance</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>