force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Rolling_Average_Months__c.field-meta.xml
<CustomField>
    <fullName>Rolling_Average_Months__c</fullName>
    <label>Rolling Average Months</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>