force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Safe_Box_Code__c.field-meta.xml
<CustomField>
    <fullName>Safe_Box_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Safe Box Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>