force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Safe_Box_Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Safe_Box_Dimensions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Safe Box Dimensions</label>
    <length>32</length>
    <type>Text</type>
</CustomField>