force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Secondary_Officer__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Officer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Financial_Accounts_Secondary_Officer</relationshipName>
    <type>Lookup</type>
</CustomField>