force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Shadow_Accounting__c.field-meta.xml
<CustomField>
    <fullName>Shadow_Accounting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shadow Accounting</label>
    <type>Checkbox</type>
</CustomField>