force-app/main/default/objects/FinServ__FinancialAccount__c/fields/SW_Adjustable_Rate__c.field-meta.xml
<CustomField>
    <fullName>SW_Adjustable_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adjustable Rate</label>
    <type>Checkbox</type>
</CustomField>