force-app/main/default/objects/FinServ__FinancialAccount__c/fields/SW_Affordable_Units__c.field-meta.xml
<CustomField>
    <fullName>SW_Affordable_Units__c</fullName>
    <label>Affordable Units</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>