force-app/main/default/objects/FinServ__FinancialAccount__c/fields/SW_Annual_Fee__c.field-meta.xml
<CustomField>
    <fullName>SW_Annual_Fee__c</fullName>
    <label>Annual Fee</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>