force-app/main/default/objects/FinServ__FinancialAccount__c/fields/SW_Application_Date__c.field-meta.xml
<CustomField>
    <fullName>SW_Application_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Application Date</label>
    <type>Date</type>
</CustomField>