force-app/main/default/objects/FinServ__FinancialAccount__c/fields/SW_Balloon_Payment__c.field-meta.xml
<CustomField>
    <fullName>SW_Balloon_Payment__c</fullName>
    <label>Balloon Payment</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>