force-app/main/default/objects/FinServ__FinancialAccount__c/fields/SW_Boarded_Loan_COCC_Number__c.field-meta.xml
<CustomField>
    <fullName>SW_Boarded_Loan_COCC_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Boarded Loan COCC Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>