force-app/main/default/objects/FinServ__FinancialAccount__c/fields/SW_Call_Code__c.field-meta.xml
<CustomField>
    <fullName>SW_Call_Code__c</fullName>
    <label>Call Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1a1</fullName>
                <label>1a1 - 1-4 family residential construction loans</label>
            </value>
            <value>
                <fullName>1a2</fullName>
                <label>1a2 - Other construction loans and all land development and other land loans</label>
            </value>
            <value>
                <fullName>1b</fullName>
                <label>1b - Secured by farmland (including farm residential and other improvements)</label>
            </value>
            <value>
                <fullName>1c1</fullName>
                <label>1c1 - Revolving, open-end loans secured by 1-4 family residential properties and extended under lines of credit</label>
            </value>
            <value>
                <fullName>1c2a</fullName>
                <label>1c2a - Secured by first liens</label>
            </value>
            <value>
                <fullName>1c2b</fullName>
                <label>1c2b - Secured by junior liens</label>
            </value>
            <value>
                <fullName>1d</fullName>
                <label>1d - Secured by multifamily (5 or more) residential properties</label>
            </value>
            <value>
                <fullName>1e1</fullName>
                <label>1e1 - Loans secured by owner-occupied, nonfarm nonresidential properties</label>
            </value>
            <value>
                <fullName>1e2</fullName>
                <label>1e2 - Loans secured by other nonfarm nonresidential properties</label>
            </value>
            <value>
                <fullName>4a</fullName>
                <label>4a - To US addresses (domicile)</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>6 - Loans to individuals for household, family, and other personal expenditures (i.e. consumer loans) (includes purchased paper)</label>
            </value>
            <value>
                <fullName>6b</fullName>
                <label>6b - Other revolving credit plans</label>
            </value>
            <value>
                <fullName>6c</fullName>
                <label>6c - Automobile loans</label>
            </value>
            <value>
                <fullName>6d</fullName>
                <label>6d - Other consumer loans</label>
            </value>
            <value>
                <fullName>9b</fullName>
                <label>9b - Other loans</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>