force-app/main/default/objects/FinServ__FinancialAccount__c/fields/SW_Cannabis_Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>SW_Cannabis_Loan_Type__c</fullName>
    <label>Cannabis Loan Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Indirect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>