force-app/main/default/objects/FinServ__FinancialAccount__c/fields/SW_Collateral_Code__c.field-meta.xml
<CustomField>
    <fullName>SW_Collateral_Code__c</fullName>
    <label>Collateral Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>COMM</fullName>
                <label>COMM - Commercial</label>
            </value>
            <value>
                <fullName>CONS</fullName>
                <label>CONS - Construction</label>
            </value>
            <value>
                <fullName>WCAP</fullName>
                <label>WCAP - Working Capital</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>