force-app/main/default/objects/FinServ__FinancialAccount__c/fields/SW_Commitment_Letter_Date__c.field-meta.xml
<CustomField>
    <fullName>SW_Commitment_Letter_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Commitment Letter Date</label>
    <type>Date</type>
</CustomField>