force-app/main/default/objects/FinServ__FinancialAccount__c/fields/SW_CRA_Loan_Purpose_Type__c.field-meta.xml
<CustomField>
    <fullName>SW_CRA_Loan_Purpose_Type__c</fullName>
    <label>CRA Loan Purpose Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>affordableHousing</fullName>
                <label>Affordable Housing</label>
            </value>
            <value>
                <fullName>lmiCommunityServices</fullName>
                <label>LMI Community Services</label>
            </value>
            <value>
                <fullName>promoteEconomicDevelopment</fullName>
                <label>Promote Economic Development</label>
            </value>
            <value>
                <fullName>lmiRevitalizationStabilization</fullName>
                <label>LMI Revitalization Stabilization</label>
            </value>
            <value>
                <fullName>lmiCommunityServicesPromoteEconomicDevelopment</fullName>
                <label>LMI Community Services &amp; Promote Economic Development</label>
            </value>
            <value>
                <fullName>lmiRevitalizationStabilizationAffordableHousing</fullName>
                <label>LMI Revitalization Stabilization &amp; Affordable Housing</label>
            </value>
            <value>
                <fullName>lmiRevitalizationStabilizationCommunityServices</fullName>
                <label>LMI Revitalization Stabilization &amp; Community Services</label>
            </value>
            <value>
                <fullName>lmiRevitalizationStabilizationEconomicDevelopment</fullName>
                <label>LMI Revitalization Stabilization &amp; Promote Economic Development</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>