force-app/main/default/objects/FinServ__FinancialAccount__c/fields/SW_CRA_Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>SW_CRA_Loan_Type__c</fullName>
    <label>CRA Loan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>smallBusiness</fullName>
                <label>Small Business</label>
            </value>
            <value>
                <fullName>communityDevelopment</fullName>
                <label>Community Development</label>
            </value>
            <value>
                <fullName>smallFarm</fullName>
                <label>Small Farm</label>
            </value>
            <value>
                <fullName>otherLinesOrLoansSmallBusiness</fullName>
                <label>Other Lines or Loans Small Business</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>