force-app/main/default/objects/FinServ__FinancialAccount__c/fields/SW_CRA_Revenue_Code_Type__c.field-meta.xml
<CustomField>
    <fullName>SW_CRA_Revenue_Code_Type__c</fullName>
    <label>CRA Revenue Code Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>lessThanOrEqualToOneMillion</fullName>
                <label>Less Than or Equal to $1 Million</label>
            </value>
            <value>
                <fullName>greaterThanOrEqualToOneMillion</fullName>
                <label>Greater Than or Equal to $1 Million</label>
            </value>
            <value>
                <fullName>notKnown</fullName>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>notApplicable</fullName>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>