force-app/main/default/objects/FinServ__FinancialAccount__c/fields/SW_Current_Employees__c.field-meta.xml
<CustomField>
    <fullName>SW_Current_Employees__c</fullName>
    <label>Current Employees</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>