force-app/main/default/objects/FinServ__FinancialAccount__c/fields/SW_Expected_Utilization_Rate__c.field-meta.xml
<CustomField>
    <fullName>SW_Expected_Utilization_Rate__c</fullName>
    <label>Expected Utilization Rate</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>