force-app/main/default/objects/FinServ__FinancialAccount__c/fields/SW_External_Refinance_Account_Numbers__c.field-meta.xml
<CustomField>
    <fullName>SW_External_Refinance_Account_Numbers__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>External Refinance Account Numbers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>