force-app/main/default/objects/FinServ__FinancialAccount__c/fields/SW_External_Refinance_Amount__c.field-meta.xml
<CustomField>
    <fullName>SW_External_Refinance_Amount__c</fullName>
    <label>External Refinance Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>