force-app/main/default/objects/FinServ__FinancialAccount__c/fields/SW_External_Refinance_Creditors__c.field-meta.xml
<CustomField>
    <fullName>SW_External_Refinance_Creditors__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>External Refinance Creditors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>