force-app/main/default/objects/FinServ__FinancialAccount__c/fields/SW_FHLB_Qualified__c.field-meta.xml
<CustomField>
    <fullName>SW_FHLB_Qualified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FHLB Qualified</label>
    <type>Checkbox</type>
</CustomField>