force-app/main/default/objects/FinServ__FinancialAccount__c/fields/SW_GAR__c.field-meta.xml
<CustomField>
    <fullName>SW_GAR__c</fullName>
    <label>GAR</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>