force-app/main/default/objects/FinServ__FinancialAccount__c/fields/SW_GAR_Source__c.field-meta.xml
<CustomField>
    <fullName>SW_GAR_Source__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GAR Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>