force-app/main/default/objects/FinServ__FinancialAccount__c/fields/SW_HMDA_Loan_Purpose_Type__c.field-meta.xml
<CustomField>
    <fullName>SW_HMDA_Loan_Purpose_Type__c</fullName>
    <label>HMDA Loan Purpose Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>homePurchase</fullName>
                <label>Home Purchase</label>
            </value>
            <value>
                <fullName>homeImprovement</fullName>
                <label>Home Improvement</label>
            </value>
            <value>
                <fullName>refinancing</fullName>
                <label>Refinancing</label>
            </value>
            <value>
                <fullName>cashoutRefinancing</fullName>
                <label>Cashout Refinancing</label>
            </value>
            <value>
                <fullName>other</fullName>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>