force-app/main/default/objects/FinServ__FinancialAccount__c/fields/SW_Holdback_Amount__c.field-meta.xml
<CustomField>
    <fullName>SW_Holdback_Amount__c</fullName>
    <label>Holdback Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>