force-app/main/default/objects/FinServ__FinancialAccount__c/fields/SW_Index__c.field-meta.xml
<CustomField>
    <fullName>SW_Index__c</fullName>
    <label>Index</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FHLBB 5 Yr Cl Adv</fullName>
            </value>
            <value>
                <fullName>WSJ Prime</fullName>
            </value>
            <value>
                <fullName>SOFR</fullName>
            </value>
            <value>
                <fullName>CME Term SOFR</fullName>
            </value>
            <value>
                <fullName>Swap</fullName>
            </value>
            <value>
                <fullName>FHLBB 1 Yr Cl Adv</fullName>
            </value>
            <value>
                <fullName>FHLBB 2 Yr Cl Adv</fullName>
            </value>
            <value>
                <fullName>FHLBB 3 Yr Cl Adv</fullName>
            </value>
            <value>
                <fullName>FHLBB 4 Yr Cl Adv</fullName>
            </value>
            <value>
                <fullName>FHLBB 7 Yr Cl Adv</fullName>
            </value>
            <value>
                <fullName>FHLBB 10 Yr Cl Adv</fullName>
            </value>
            <value>
                <fullName>FHLB - Chicago</fullName>
            </value>
            <value>
                <fullName>FHLB - Dallas</fullName>
            </value>
            <value>
                <fullName>FHLB - Des Moines</fullName>
            </value>
            <value>
                <fullName>FHLB Daily Average</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>