force-app/main/default/objects/FinServ__FinancialAccount__c/fields/SW_Index_Rate__c.field-meta.xml
<CustomField>
    <fullName>SW_Index_Rate__c</fullName>
    <label>Index Rate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WSJ Prime</fullName>
            </value>
            <value>
                <fullName>CME Term SOFR</fullName>
            </value>
            <value>
                <fullName>FHLBB 1 Yr CL Adv</fullName>
            </value>
            <value>
                <fullName>FHLBB 2 Yr CL Adv</fullName>
            </value>
            <value>
                <fullName>FHLBB 3 Yr CL Adv</fullName>
            </value>
            <value>
                <fullName>FHLBB 5 Yr CL Adv</fullName>
            </value>
            <value>
                <fullName>FHLBB 7 Yr CL Adv</fullName>
            </value>
            <value>
                <fullName>FHLBB 10 Yr CL Adv</fullName>
            </value>
            <value>
                <fullName>Collateral/CD Loans</fullName>
            </value>
            <value>
                <fullName>Treasury</fullName>
            </value>
            <value>
                <fullName>FHLB Daily Average</fullName>
            </value>
            <value>
                <fullName>FHLB - Chicago</fullName>
            </value>
            <value>
                <fullName>FHLB - Dallas</fullName>
            </value>
            <value>
                <fullName>FHLB - Des Moines</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>