force-app/main/default/objects/FinServ__FinancialAccount__c/fields/SW_Initial_Rate_Period__c.field-meta.xml
<CustomField>
    <fullName>SW_Initial_Rate_Period__c</fullName>
    <label>Initial Rate Period</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>