force-app/main/default/objects/FinServ__FinancialAccount__c/fields/SW_Invest_MA_Qualified__c.field-meta.xml
<CustomField>
    <fullName>SW_Invest_MA_Qualified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invest MA Qualified</label>
    <type>Checkbox</type>
</CustomField>