force-app/main/default/objects/FinServ__FinancialAccount__c/fields/SW_Jobs_Created__c.field-meta.xml
<CustomField>
    <fullName>SW_Jobs_Created__c</fullName>
    <label>Jobs Created</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>