force-app/main/default/objects/FinServ__FinancialAccount__c/fields/SW_Jobs_Created_Retained__c.field-meta.xml
<CustomField>
    <fullName>SW_Jobs_Created_Retained__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Jobs Created Retained</label>
    <type>Checkbox</type>
</CustomField>