force-app/main/default/objects/FinServ__FinancialAccount__c/fields/SW_Loan_Purpose__c.field-meta.xml
<CustomField>
    <fullName>SW_Loan_Purpose__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Loan Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>