force-app/main/default/objects/FinServ__FinancialAccount__c/fields/SW_Loan_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>SW_Loan_Type_Code__c</fullName>
    <label>Loan Type Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CM01 - Constr Industrial Rev Bond</fullName>
            </value>
            <value>
                <fullName>CM02 - Construction</fullName>
            </value>
            <value>
                <fullName>CM04 - Constr Res 1-4</fullName>
            </value>
            <value>
                <fullName>CM09 - Industrial Revenue Bond</fullName>
            </value>
            <value>
                <fullName>CM11 - Install Fixed</fullName>
            </value>
            <value>
                <fullName>CM13 - Letter of Credit</fullName>
            </value>
            <value>
                <fullName>CM14 - LOC</fullName>
            </value>
            <value>
                <fullName>CM16 - MTG Adj</fullName>
            </value>
            <value>
                <fullName>CM17 - Mtg Fixed</fullName>
            </value>
            <value>
                <fullName>CM18 - Overdraft Protection</fullName>
            </value>
            <value>
                <fullName>CM19 - Tax Exempt Bond</fullName>
            </value>
            <value>
                <fullName>CM20 - MEDC</fullName>
            </value>
            <value>
                <fullName>CM22 - LOC Online Adv</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>