force-app/main/default/objects/FinServ__FinancialAccount__c/fields/SW_MSB_Refinance_Amount__c.field-meta.xml
<CustomField>
    <fullName>SW_MSB_Refinance_Amount__c</fullName>
    <label>MSB Refinance Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>