force-app/main/default/objects/FinServ__FinancialAccount__c/fields/SW_Other_Fees__c.field-meta.xml
<CustomField>
    <fullName>SW_Other_Fees__c</fullName>
    <label>Other Fees</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>