force-app/main/default/objects/FinServ__FinancialAccount__c/fields/SW_Participation_Type__c.field-meta.xml
<CustomField>
    <fullName>SW_Participation_Type__c</fullName>
    <label>Participation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Participant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>