force-app/main/default/objects/FinServ__FinancialAccount__c/fields/SW_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>SW_Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>fixedPayment</fullName>
                <label>Fixed Payment</label>
            </value>
            <value>
                <fullName>fixedPrincipal</fullName>
                <label>Fixed Principal</label>
            </value>
            <value>
                <fullName>lineOfCredit</fullName>
                <label>Line of Credit</label>
            </value>
            <value>
                <fullName>revolvingLineOfCredit</fullName>
                <label>Revolving Line of Credit</label>
            </value>
            <value>
                <fullName>interestOnly</fullName>
                <label>Interest Only</label>
            </value>
            <value>
                <fullName>fixedPaymentBalloon</fullName>
                <label>Fixed Payment Balloon</label>
            </value>
            <value>
                <fullName>fixedPrincipalBalloon</fullName>
                <label>Fixed Principal Balloon</label>
            </value>
            <value>
                <fullName>singlePaymentBalloon</fullName>
                <label>Single Payment Balloon</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>