force-app/main/default/objects/FinServ__FinancialAccount__c/fields/SW_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>SW_Product_Code__c</fullName>
    <label>Product Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - 4 RES. HOME &amp; BUSINESS -0099</fullName>
            </value>
            <value>
                <fullName>1 FAM. OVER 80 LTV INSURED -0110</fullName>
            </value>
            <value>
                <fullName>1 FAMILY -0010</fullName>
            </value>
            <value>
                <fullName>1 FAMILY CONSTRUCT. PERM LOAN -0514</fullName>
            </value>
            <value>
                <fullName>1 FAMILY CONSTRUCTION -0501</fullName>
            </value>
            <value>
                <fullName>1 FAMILY N.O.OCC. -2010</fullName>
            </value>
            <value>
                <fullName>1 FAMILY PURCHASE -0853</fullName>
            </value>
            <value>
                <fullName>1 FAMILY REFINANCE -0852</fullName>
            </value>
            <value>
                <fullName>1-4 FAMILY JUMBO -0856</fullName>
            </value>
            <value>
                <fullName>1-4 RES &gt; 80 LTV @PMI -0033</fullName>
            </value>
            <value>
                <fullName>1-4 RES. HOME IMPR. SECRURED-0022</fullName>
            </value>
            <value>
                <fullName>1-4 RES. PURCHASE -0030</fullName>
            </value>
            <value>
                <fullName>1-4 RES. REFINANCE -0031</fullName>
            </value>
            <value>
                <fullName>2-4 FAMILY N.O.OCC. -2020</fullName>
            </value>
            <value>
                <fullName>2-4 FAMILY PURCHASE -0855</fullName>
            </value>
            <value>
                <fullName>2-4 FAMILY REFINANCE -0854</fullName>
            </value>
            <value>
                <fullName>20+ Units -0123</fullName>
            </value>
            <value>
                <fullName>5 OR &gt; HOME &amp; BUSINESS -0121</fullName>
            </value>
            <value>
                <fullName>5-20 UNITS -0120</fullName>
            </value>
            <value>
                <fullName>ACQ OF DEVELOPED BUS.LOTS/SITE-0152</fullName>
            </value>
            <value>
                <fullName>COMM - ALL OTHER -0630</fullName>
            </value>
            <value>
                <fullName>COMM - CONSTRUCTION PERM LOAN-0673</fullName>
            </value>
            <value>
                <fullName>COMM - SECURED AUTOMOBILE -0701</fullName>
            </value>
            <value>
                <fullName>COMM - SECURED BY DEPOSIT -0700</fullName>
            </value>
            <value>
                <fullName>COMM-ALL OTHER NON RESID -NOOC-0609</fullName>
            </value>
            <value>
                <fullName>COMM-ALL OTHER NON RESID -OOC -0608</fullName>
            </value>
            <value>
                <fullName>COMM-CONDO NON-OWNER OCCUPIED -0604</fullName>
            </value>
            <value>
                <fullName>COMM-CONDO-OWNER OCCUPIED -0605</fullName>
            </value>
            <value>
                <fullName>COMM-CONST 1-4 FAMILY RESID -0671</fullName>
            </value>
            <value>
                <fullName>COMM-CONST OTHER/LAND DEVEL -0672</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>