force-app/main/default/objects/FinServ__FinancialAccount__c/fields/SW_Proposed_Commercial_Loan_Path__c.field-meta.xml
<CustomField>
    <fullName>SW_Proposed_Commercial_Loan_Path__c</fullName>
    <label>Proposed Commercial Loan Path</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12013</fullName>
                <label>Prospect - Open</label>
            </value>
            <value>
                <fullName>12014</fullName>
                <label>Prospect - Application</label>
            </value>
            <value>
                <fullName>12015</fullName>
                <label>Prospect - Closed</label>
            </value>
            <value>
                <fullName>12016</fullName>
                <label>Lender Review</label>
            </value>
            <value>
                <fullName>12017</fullName>
                <label>Underwriting</label>
            </value>
            <value>
                <fullName>12018</fullName>
                <label>Withdrawn</label>
            </value>
            <value>
                <fullName>12019</fullName>
                <label>Approval Pending</label>
            </value>
            <value>
                <fullName>12020</fullName>
                <label>Bank Declined</label>
            </value>
            <value>
                <fullName>12021</fullName>
                <label>Approved - Pending Acceptance</label>
            </value>
            <value>
                <fullName>12022</fullName>
                <label>Approved - Accepted</label>
            </value>
            <value>
                <fullName>12023</fullName>
                <label>Approved - Withdrawn</label>
            </value>
            <value>
                <fullName>35354</fullName>
                <label>Clear to Close</label>
            </value>
            <value>
                <fullName>35355</fullName>
                <label>Closed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>