force-app/main/default/objects/FinServ__FinancialAccount__c/fields/SW_Proposed_Loan_Comments__c.field-meta.xml
<CustomField>
    <fullName>SW_Proposed_Loan_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Proposed Loan Comments</label>
    <type>TextArea</type>
</CustomField>