force-app/main/default/objects/FinServ__FinancialAccount__c/fields/SW_Proposed_Loan_Id__c.field-meta.xml
<CustomField>
    <fullName>SW_Proposed_Loan_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sageworks Proposed Loan ID</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>